# vcard_tui

./: .rustfmt.toml  Cargo.toml  README.md
src/: main.rs  util.rs
src/state/: contact.rs  contacts.rs  extra.rs  files.rs  list.rs  mod.rs  properties.rs  selected.rs
src/state/contact/: extra.rs  mod.rs  properties.rs  property.rs
src/state/popup/: confirm.rs  export.rs  import.rs  message.rs  mod.rs  property_adr.rs  property_bday.rs  property_email.rs  property_extra.rs  property_n.rs  property_note.rs  property_remove.rs  property_tel.rs  property_url.rs  vcard_add.rs
src/tui/: mod.rs
src/tui/handler/: contact.rs  contacts.rs  mod.rs
src/tui/handler/contact/: extra.rs  mod.rs  properties.rs  property.rs
src/tui/handler/popup/: confirm.rs  export.rs  import.rs  message.rs  mod.rs  property_adr.rs  property_bday.rs  property_email.rs  property_extra.rs  property_n.rs  property_note.rs  property_remove.rs  property_tel.rs  property_url.rs  vcard_add.rs
src/tui/render/: contact.rs  contacts.rs  extra.rs  mod.rs  properties.rs  property.rs  toolbar.rs
src/tui/render/popup/: confirm.rs  export.rs  import.rs  message.rs  mod.rs  property_adr.rs  property_bday.rs  property_email.rs  property_extra.rs  property_n.rs  property_note.rs  property_remove.rs  property_tel.rs  property_url.rs  vcard_add.rs
