[package]
name = "vcard_tui"
version = "0.1.0"
authors = ["Norman Kerr"]
edition = "2021"
description = "Terminal UI application for managing vCard contacts."
readme = "README.md"
license = "MIT"
repository = "https://github.com/kenianbei/vcard_tui"
documentation = "https://docs.rs/vcard_tui"
keywords = ["vcard", "contacts", "email", "tui", "terminal"]
categories = ["command-line-utilities", "email"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.68"
crossterm = "0.25.0"
tui = "0.19.0"
tui-textarea = "0.2.0"
vcard_parser = "0.2.1"

[[bin]]
name = "vct"
path = "src/main.rs"
